// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stepper > (Snapshot) renders with a value 1`] = `
<div>
  <div
    class="border-border bg-muted text-muted-foreground flex h-8 divide-x-(--border-width) overflow-hidden rounded-md border-(length:--border-width)"
  >
    <button
      aria-label="Decrease"
      class="flex w-7 cursor-pointer items-center justify-center disabled:cursor-not-allowed disabled:opacity-40"
      title="Decrease"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <span
      class="flex min-w-12 items-center justify-center px-1 text-xs font-bold tabular-nums"
    >
      +0.3 s
    </span>
    <button
      aria-label="Increase"
      class="flex w-7 cursor-pointer items-center justify-center disabled:cursor-not-allowed disabled:opacity-40"
      title="Increase"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper > (Snapshot) renders without a value, with the decrement button disabled 1`] = `
<div>
  <div
    class="border-border bg-muted text-muted-foreground flex h-8 divide-x-(--border-width) overflow-hidden rounded-md border-(length:--border-width)"
  >
    <button
      aria-label="Decrease"
      class="flex w-7 cursor-pointer items-center justify-center disabled:cursor-not-allowed disabled:opacity-40"
      disabled=""
      title="Decrease"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <button
      aria-label="Increase"
      class="flex w-7 cursor-pointer items-center justify-center disabled:cursor-not-allowed disabled:opacity-40"
      title="Increase"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;
